# PatrickStar

./: COPYING  ChangeLog  LICENSE  Makefile.am  Makefile.in  P_install.sh  PatrickStar.8  PatrickStar.pc.in  README.md  RELEASE.NOTES  aclocal.m4  configure  configure.in  verstuff.pl
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: BUGS  CREDITS  INSTALL  Makefile.am  Makefile.in  NEWS  PROBLEMS  PatrickStar_manual.tex  README  README.PLUGINS  README.PerfProfiling  README.SMTP  README.UNSOCK  README.WIN32  README.active  README.alert_order  README.appid  README.counts  README.csv  README.daq  README.dcerpc2  README.decode  README.decoder_preproc_rules  README.dnp3  README.file  README.filters  README.frag3  README.ftptelnet  README.http_inspect  README.ipv6  README.multipleconfigs  README.pcap_readmode  README.ppm  README.reload  README.reputation  README.sfportscan  README.tag  README.unified2  USAGE  generators
etc/: Makefile.am  Makefile.in  PatrickStar.conf  gen-msg.map
m4/: Makefile.in
preproc_rules/: Makefile.in
rpm/: Makefile.am  Makefile.in  PatrickStar.logrotate  PatrickStar.spec  PatrickStar.sysconfig  PatrickStard  README.build_rpms  README.rpms  generate-all-rpms
src/: Makefile.am  Makefile.in  PatrickStar.c  PatrickStar.h  active.c  active.h  byte_extract.c  checksum.h  debug.c  decode.c  decode.h  detect.c  detect.h  detection_filter.c  detection_util.c  detection_util.h  dump.c  encode.c  event.h  event_queue.c  event_wrapper.c  fpcreate.c  fpcreate.h  fpdetect.c  fpdetect.h  generators.h  hashstring.c  ipv6_port.h  log.c  log_text.c  log_text.h  memory_stats.c  mstring.c  obfuscation.c  packet_time.c  parser.c  parser.h  pcrm.c  pkt_tracer.c  plugbase.c  (+15 more)
src/control/: Makefile.in  sfcontrol.c
src/detection-plugins/: Makefile.am  Makefile.in  sp_appid.c  sp_asn1.c  sp_asn1_detect.c  sp_base64_data.c  sp_base64_decode.c  sp_byte_check.c  sp_byte_check.h  sp_byte_extract.c  sp_byte_jump.c  sp_byte_math.c  sp_byte_math.h  sp_clientserver.c  sp_cvs.c  sp_dsize_check.c  sp_file_data.c  sp_file_type.c  sp_flowbits.c  sp_flowbits.h  sp_ftpbounce.c  (+30 more)
src/dynamic-examples/dynamic-rule/: Makefile.am  Makefile.in  rules.c  sid109.c  sid637.c
src/preprocessors/Stream6/: Makefile.am  Makefile.in  PatrickStar_stream_icmp.c  PatrickStar_stream_icmp.h  PatrickStar_stream_ip.c  PatrickStar_stream_ip.h  PatrickStar_stream_tcp.c  PatrickStar_stream_udp.c  stream_common.c  stream_paf.c  stream_paf.h
templates/: Makefile.in  sp_template.c
tools/: Makefile.in
tools/control/: Makefile.am  Makefile.in  PatrickStar_dump_packets.c  README.PatrickStar_control  README.PatrickStar_dump_packets_control  sfcontrol.c
(+462 files in other folders)
